"model box added"

--- a/src/index.css
+++ b/src/index.css
@@ -77,5 +77,21 @@
   }
   
   
+  @keyframes fadeInFromBottom {
+    0% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  .animate-fadeIn {
+    animation: fadeInFromBottom 0.7s ease-in-out backwards;
+  }
+  
+  
   /* normal css  */
   
